summer clean-up and ref sheet wip update. more to come

--- a/html/index.html
+++ b/html/index.html
@@ -63,10 +63,10 @@
     straight up in the muoring<br><br>
     <a href="https://ring.icosahedr.online/previous?member=spax">&lt;-</a> <a href="https://ring.icosahedr.online/random">random</a> <a href="https://ring.icosahedr.online/next?member=spax">-&gt;</a>
   </article>
-  <article id="cobaltWebring" class="webring centertext short" name="spax.zone">
+  <!--<article id="cobaltWebring" class="webring centertext short" name="spax.zone">
     part of the cobalt webring<br><br>
     (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
-  </article>
+  </article>-->
   <article id="eggbug-eggring" class="webring centertext short">
     part of the cohost webring<br><br>
     (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
@@ -181,7 +181,7 @@
   <article who="nahua" emotion="bashful" id="spaxzone-button">
     And don't forget to add my own button to your site!<br>
     <a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif"></a>
-    <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/buttons/spaxdotzone.gif"&gt;&lt;/a&gt;</textarea>
+    <textarea readonly style="height:60px;">&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/buttons/spaxdotzone.gif"&gt;&lt;/a&gt;</textarea>
   </article>
   <article who="nahua" emotion="neutral">
     (Hotlinking mine is okay)
@@ -301,7 +301,7 @@
     Stay tuned for updates!
   </article>
   <article class="short">
-    (This page was last updated on May 14th, 2025)<br><br>
+    (This page was last updated on June 21st, 2025)<br><br>
     ((This section will be updated automatically at some point))<br><br>
     (((Also don't click <a href="/nsfw" target="_blank">here</a>)))
   </article>
