--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -3,7 +3,7 @@
   <head>
     <title>Nahua's Ref Sheet</title>
     <meta name="description" content="(Please visit the webpage to view more design details!)" />
-    <meta property="og:image" content="https://cdn.spax.zone/nahua-ref-sheet.png" />
+    <meta property="og:image" content="https://cdn.spax.zone/nahua_bananas_design_update_wip2.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
@@ -28,7 +28,7 @@
         cursor: pointer;
       }
       #ref {
-        width: 50%;
+        width: 25%;
         max-width: revert;
       }
       #ref img {
@@ -37,15 +37,14 @@
       #refcontainer {
         position: relative;
       }
-      #ayo {
+      /*#ayo {
         position: absolute;
         width: 9%;
         height: 10%;
         left: 13%;
         bottom: 35%;
         cursor: not-allowed;
-        /* border: dashed 2px red; */
-      }
+      }*/
       #clarifications-header {
         display: inline-block;
         margin-bottom: 10px;
@@ -65,27 +64,28 @@
     <article class="art" id="ref">
       <span id="clarifications-header">!! Scroll down for design notes / clarifications !!</span>
       <div id="refcontainer">
-        <img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping emoji graphic. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns.">
+        <img src="https://cdn.spax.zone/nahua_bananas_design_update_wip2.png">
+        <!--<img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping emoji graphic. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns.">
         <div id="ayo" title="ayo what you doin over there"></div>
+      -->
       </div>
       Artist: 1LikeBananas<br>
-      Alt text: <a href="https://goatygoats.com/" target="_blank">Goaty Goats</a><br>
-      <a href="https://cdn.spax.zone/nahua-ref-sheet.png" target="_blank">High Res Version</a>
+      New ref is not 100% finalized! Expect labels and alt text soon.<br>
+      Old ref can be found <a href="https://cdn.spax.zone/nahua-ref-sheet.png">here</a>
+      <!--Alt text: <a href="https://goatygoats.com/" target="_blank">Goaty Goats</a><br>-->
+      <!--<a href="https://cdn.spax.zone/nahua-ref-sheet.png" target="_blank">High Res Version</a>-->
     </article>
     <section id="clarifications">
       <article>
         Design notes and clarifications:<br>
         - She has four fingers (as opposed to three or five).<br>
         - Her hair is very kelp-like in texture, and the light blue parts of it are phosphorescent.<br>
-        - Her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>) are indeed stylized like that.<br>
-        - Note the little yellow things next to her eyes. They're little flairs that come off of them rather than actually being on her skin, since it's a bit ambiguous in the ref. It's also worth noting that they're optional if you can't seem to get them right.<br>
+        - Those 6 things behind her head are her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>)!<br>
+        - Note the little yellow things next to her eyes. They're little flairs that come off of them rather than actually being on her skin, since it's a bit ambiguous in the ref.<br>
         - She has minor transformative powers, lore reasons for this will be explained soon-ish.<br>
-        - Her outfit doesn't need to be the one in the ref! (In fact, I encourage you to draw her in something else :sob:). She does tend to prefer more open/breathable clothing though. She goes for a tomboy-ish look.<br>
-        - (PLEASE don't draw the arrow on her tanktop. TOO MANY PEOPLE have called it a reddit upvote).<br>
+        - Her outfit doesn't need to be the one in the ref!. She does tend to prefer more open/breathable clothing though. She goes for a tomboy-ish look.<br>
         - Her breasts can be any size up to B-cups (A-cups are usually fine). And tell Spax the word pineapple as proof you read this in its entirety.<br>
         - The headphones are optional rather than encouraged. She has no visible ears.<br>
-        - She has sharp teeth! Refer to <a href="https://bsky.app/profile/nikao56.bsky.social/post/3lclevodrvk2m" target="_blank">this piece of art</a>.<br>
-        - Her legs are <a href="https://en.wikipedia.org/wiki/Digitigrade" target="_blank">digitigrade</a> (high ankle, not flat-footed which is <a href="https://en.wikipedia.org/wiki/Plantigrade" target="_blank">plantigrade</a>).<br>
         - Some words I would use to describe her personality: outgoing, smug, playful, naïve, flirtatious(?), and goofy.<br>
         <!--Old design notes from the slightly older ref:
           - Always wears headphones or ear-coverings (she looks weird without them).
@@ -100,9 +100,10 @@
       <article id="goop">
         GOOP INFORMATION:<br>
         Recently, I have been on this so-called "goop arc". Nahua now has a canon alternative form in which she is goop (a more viscous sort of slime). This is still a very experimental era, so depictions of her as goop won't be scrutinized as much as the "solid" form.<br>
-        Here are the relevant pieces of goop art:<br>
-        <a target="_blank" href="https://bsky.app/profile/did:plc:erljg5y74ltqn5pyc7y33n6w/post/3ldpogpqhlc24">First</a><br>
-        <a target="_blank" href="https://bsky.app/profile/did:plc:6qbvevxtcgu4t6vw6xkpajdq/post/3lftehwindk2c">Second</a><br>
+        Here are the two most relevant pieces of goop art:<br>
+        <a target="_blank" href="https://bsky.app/profile/did:plc:erljg5y74ltqn5pyc7y33n6w/post/3ldpogpqhlc24">First</a> (Drawn by accentaigu)<br>
+        <a target="_blank" href="https://bsky.app/profile/spax.zone/post/3lqyfnrk4cc2r">Most up-to-date</a> (Drawn by 1LikeBananas)<br>
+        <!--<a target="_blank" href="https://bsky.app/profile/did:plc:6qbvevxtcgu4t6vw6xkpajdq/post/3lftehwindk2c">Second</a><br>
         <a target="_blank" href="https://cdn.spax.zone/Nahua_Kylefur_Goop.png">Third</a> (<a target="_blank" href="https://toyhou.se/KyleFur">Artist</a>)<br>
         <a target="_blank" href="https://cdn.spax.zone/Nahua_Bananas_Slime.png">Fourth</a><br>
         <a target="_blank" href="https://cdn.spax.zone/Nahua_Jack_Goop.png">Fifth</a> (<a target="_blank" href="https://pumpoen.tumblr.com/">Artist</a>)<br>
@@ -110,7 +111,8 @@
         <a target="_blank" href="https://vgen.co/Bumbabeezle/portfolio/showcase/spax-s-simple-animated-icon/4913917c-f43d-478d-96cd-6ef6ce75db86">Seventh</a><br>
         <a target="_blank" href="https://vgen.co/graylure/portfolio/showcase/spax-s-skeb-game-boy-inspired-chibi-/d59d7bc2-743b-4cd1-8ed3-110bffca7763">Eighth</a><br>
         <a target="_blank" href="https://bsky.app/profile/did:plc:qudfhdxzcnp4y34ezalz5iep/post/3ljy5prtrzk25">Ninth</a><br>
-        Note: some of these haven't been posted publicly by the artists, and are direct links on my CDN. I have credited the artist next to the links if they have a social.
+        Note: some of these haven't been posted publicly by the artists, and are direct links on my CDN. I have credited the artist next to the links if they have a social.-->
+        NOTE: A goop ref sheet will be made in the coming months!
       </article>
     </section>
     <article>
