update date of last update

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -138,7 +138,7 @@
       </div>
     </article>
     <article class="short">
-      Last updated: February 20th, 2025<br>
+      Last updated: June 21st, 2025<br>
     </article>
     <article class="short">
       (And <a href="./index.html">click here</a> to see the main page!)
