one extra note i forgot

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -83,6 +83,7 @@
         - Those 6 things behind her head are her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>)!<br>
         - Note the little yellow things next to her eyes. They're little flairs that come off of them rather than actually being on her skin, since it's a bit ambiguous in the ref.<br>
         - She has minor transformative powers, lore reasons for this will be explained soon-ish.<br>
+        - She wears an elastic tailband at the base of her tail for comfort reasons! Not optional.<br>
         - Her outfit doesn't need to be the one in the ref!. She does tend to prefer more open/breathable clothing though. She goes for a tomboy-ish look.<br>
         - Her breasts can be any size up to B-cups (A-cups are usually fine). And tell Spax the word pineapple as proof you read this in its entirety.<br>
         - The headphones are optional rather than encouraged. She has no visible ears.<br>
