discontinuation of the djmax.html

--- a/tests/djmax/index.html
+++ b/tests/djmax/index.html
@@ -16,6 +16,7 @@
   <header>
     <h1>Random (Eligible) DJMax Song Generator</h1>
     <h2>For moD Jam MAX</h2>
+    <h3>(this tool is now deprecated due to cobalt discontinuing its public api and my removal of the xlsx npm package)</h3>
     <p>Songs selected: <span id="songs-selected"></span></p>
   </header>
   <noscript>
