first step in making this better to build in a dev environment

--- a/html/2024.html
+++ b/html/2024.html
@@ -89,7 +89,7 @@
       I really like <a href="https://youtu.be/gTBirmyzUbU">in a room7 F760</a> and <a href="https://youtu.be/5cswwkz8sAQ">Acrid Avid Jam Shred</a> in particular, but there's so many other ones that are so good. Remind me later to make a playlist of my favorite Aphex Twin songs.
     </article>
     <article who="nahua" emotion="joyful">
-      I also created <a href="/tests/horse/">The Horse Button™</a>, one of the funniest web apps I've ever made. You click the button and it'll take you to a random .horse site!
+      I also created <a href="/horse/">The Horse Button™</a>, one of the funniest web apps I've ever made. You click the button and it'll take you to a random .horse site!
     </article>
     <article who="nahua" emotion="look">
       I used to have a text document of all the valid domains, but it's hard to update on my own, so I decided to just scrape <a href="https://every.horse/">every.horse</a> which is a semi-automatically updated list that I can reliably use.
@@ -145,7 +145,7 @@
       I should do a dedicated blogpost about the entire month of May. So much happened during it regarding my schoolwork and cohost.
     </article>
     <article who="nahua" emotion="neutral">
-      Something too good to skip though is <a href="/tests/animal-gender-bodypart/">animal gender bodypart</a>: a silly website I made based on a cohost post I saw that poked fun at the tumblr usernames leaking into cohost, consisting of an animal, some sort of gendered term, and a common body part. I got a friend to style it nicely and now it's a fun thing to go to every so often.
+      Something too good to skip though is <a href="/animal-gender-bodypart/">animal gender bodypart</a>: a silly website I made based on a cohost post I saw that poked fun at the tumblr usernames leaking into cohost, consisting of an animal, some sort of gendered term, and a common body part. I got a friend to style it nicely and now it's a fun thing to go to every so often.
     </article>
     <article who="nahua" emotion="bashful">
       Anyways, I figured everything out and was able to pass all my classes in time for graduation, so now I can finally say I've graduated high school! College is next up.
