--- a/html/gender.html
+++ b/html/gender.html
@@ -130,7 +130,7 @@
     I'd like to thank <a href="https://marbelynrye.a0001.net/">marbelynrye</a>, <a href="https://bsky.app/profile/oolie.fish">Oolie</a>, <a href="https://wavebeem.com/">Sage</a>, and <a href="https://bsky.app/profile/rangal.bsky.social">Rangal</a> for either helping me talk through my feelings, or calling me a girl (the catalyst to this whole thing).
   </article>
   <article who="nahua" emotion="neutral">
-    You can <a href="./index.html">head back to the main page</a>, but otherwise, take care!
+    You can <a href="/index.html">head back to the main page</a>, but otherwise, take care!
   </article>
 </body>
 </html>
