--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <article id="top">
-    <a href="./sitelist.html">Click here</a> to see my full site list!<br>
+    <a href="/sitelist.html">Click here</a> to see my full site list!<br>
     -Spax
   </article>
   <article who="claire" emotion="neutral">
