--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -142,7 +142,7 @@
       Last updated: June 21st, 2025<br>
     </article>
     <article class="short">
-      (And <a href="./index.html">click here</a> to see the main page!)
+      (And <a href="/index.html">click here</a> to see the main page!)
     </article>
     <script>
       async function writeClipboardText(text) {
