--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -13,38 +13,38 @@
       if you *do* wanna see everything, check out the repo! https://spax.zone/repo :3
     -->
     <article>
-      <a href="./index.html">Main Page</a><br>
+      <a href="/index.html">Main Page</a><br>
       The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
     </article>
     <!--
     <article>
-      <a href="./fanart.html">Character Art!</a><br>
+      <a href="/fanart.html">Character Art!</a><br>
       This is where I post all art of my characters! Please check out the cool artists who made them!<br>Sidenote: this page needs to get overhauled. It is severely out of date.
     </article>
     -->
     <article>
-      <a href="./nahua-ref-sheet.html">Nahua's Ref Sheet</a><br>
+      <a href="/nahua-ref-sheet.html">Nahua's Ref Sheet</a><br>
       The ref sheet of my fursona, Nahua!
     </article>
     <article>
-      <a href="./gender.html">My Gender</a><br>
+      <a href="/gender.html">My Gender</a><br>
       A blogpost about my recent gender crisis! Skip to the bottom if you don't want to read a lot of text.
     </article>
     <article>
-      <a href="/tests/ratspin/index.html">Rat Spin</a><br>
+      <a href="/ratspin/index.html">Rat Spin</a><br>
       Watch the rat spin to the freebird solo!!
     </article>
     <article>
-      <a href="/tests/webfishing-drunk/index.html">WEBFISHING Drunk Text Generator</a><br>
+      <a href="/webfishing-drunk/index.html">WEBFISHING Drunk Text Generator</a><br>
       Webfishing's drunk text generation for when you're not playing webfishing!
     </article>
     <!--
     <article>
-      <a href="./isspaxatschool.html">Is Spax At School?</a><br>
+      <a href="/isspaxatschool.html">Is Spax At School?</a><br>
       This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not. Finally works!
     </article>
     <article>
-      <a href="./changelog.html">Changelog</a><br>
+      <a href="/changelog.html">Changelog</a><br>
       The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future. (I really need to update this.)
     </article>
     -->
@@ -57,46 +57,46 @@
       Playtime: ~2 hours
     </article>
     <article>
-      <a href="./DEPalldialogue.html">(SPOILERS) All DEP Dialogue</a><br>
+      <a href="/DEPalldialogue.html">(SPOILERS) All DEP Dialogue</a><br>
       All Dweller's Empty Path dialogue from the game! Duplicates are removed.<br>
       Spoilers ahead! Please <a href="https://dep.spax.zone/">play the game first</a>.
     </article>
     <!-- forgot i deleted this one. will be back up later once i decide to automate it
     <article>
-      <a href="./alldepfaces.html">All DEP Character Faces</a><br>
+      <a href="/alldepfaces.html">All DEP Character Faces</a><br>
       All Dweller's Empty Path faces that are supported on this site! Excluding custom ones.
     </article>
     -->
     <article>
-      <a href="./allcustomfaces.html">All Custom DEP Character Faces</a><br>
+      <a href="/allcustomfaces.html">All Custom DEP Character Faces</a><br>
       All currently supported custom portraits in the style of DEP. All Nahua portraits were done by Bananas! The old legacy Spax ones were done by me.
     </article>
     <!--
     <article>
-      <a href="./plannedchanges.html">Planned Changes</a><br>
+      <a href="/plannedchanges.html">Planned Changes</a><br>
       Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. (I really need to update this too.)
     </article>
     <article>
-      <a href="./MojoArrowAdvice.html">Mojo's Arrow Advice</a><br>
+      <a href="/MojoArrowAdvice.html">Mojo's Arrow Advice</a><br>
       This is my Create project that I made for my AP Computer Science Principles class! This program is not endorsed by BrotherMojo at all by the way.
     </article>
     -->
     <article>
-      <a href="/tests/horse/index.html">The Horse Button™</a><br>
+      <a href="/horse/index.html">The Horse Button™</a><br>
       The Horse Button™ takes you to a random registered .horse domain.<br>
       THE LIST IS NOT FILTERED FOR DANGEROUS CONTENT. CLICK AT YOUR OWN RISK.<br>
       Originally made in about an hour.
     </article>
     <article>
-      <a href="/tests/ooo.html">.ooo explorer</a><br>
+      <a href="/ooo.html">.ooo explorer</a><br>
       Explore all sites that have "o" as the only character in the url! Sorry if this one doesn't stay up-to-date.
     </article>
     <article>
-      <a href="/tests/animal-gender-bodypart/index.html">Animal Gender Bodypart</a><br>
+      <a href="/animal-gender-bodypart/index.html">Animal Gender Bodypart</a><br>
       A fun username generator based on <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam">this</a> chost.
     </article>
     <article>
-      <a href="./sitelist.html">Site List</a><br>
+      <a href="/sitelist.html">Site List</a><br>
       This page right here!
     </article>
   </body>
