misc changes to horse button

--- a/tests/horse/index.html
+++ b/tests/horse/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>The Horse Button™</title>
   <meta name="theme-color" content="#c1694f">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Press it if you dare">
   <meta property="og:image" content="https://spax.zone/images/misc/horse.png" type="image/png">
   <link rel="icon" href="/images/misc/horse.png">
