--- a/html/index.html
+++ b/html/index.html
@@ -192,7 +192,7 @@
   <article who="nahua" emotion="neutral">
     And here's a word from a johnvertisement:
   </article>
-  <iframe src="https://john.citrons.xyz/embed?ref=spax.zone" style="max-width:728px;width:100%;height:90px;border:none;"></iframe>
+  <iframe src="https://john.citrons.xyz/embed?ref=spax.zone" style="max-width:728px;width:100%;aspect-ratio:728/90;border:none;"></iframe>
   <!--gonna put my johnvertisement here:
   <article who="nahua" emotion="smug" id="spaxjohn">
     <span class="r1">&lt;<span style="display:inline-block;transform:translateY(1.25px) scaleX(200%);margin-left:-3px;margin-right:10px;">-</span>THIS MOTHERSLUDGER</span> was turned into <span class="g3" style="display: inline-block; font-size: 30px; transform: translateY(20%); text-shadow: rgb(var(--g3v), 1) 0 1px 1px, rgb(var(--g3v), 0.75) 0 3px 2px, rgb(var(--g3v), 0.5) 0 7.5px 3px;">GOOP</span> <span style="font-size: 16px;">(find out how at <a href="https://spax.zone/">spax.zone</a>)</span>
