--- a/html/index.html
+++ b/html/index.html
@@ -169,7 +169,7 @@
       <img src="https://content.styx-os.org/file/data/73f4itz6w6nnfrfplylx/PHID-FILE-hk3ea2rb7yafrut3hmle/styx-8831-rounded.gif" alt="styx-os.org">
     </a>
     <a href="https://lisanne.gay/">
-      <img src="https://lisanne.gay/88x31.gif" alt="lisanne.gay">
+      <img src="https://lisanne.gay/88x31_pls_DO_hotlink.png" alt="lisanne.gay">
     </a>
     <a href="https://sudospective.net/">
       <img src="https://sudospective.net/content/images/2023/07/subo-badge-1.png" alt="sudospective.net">
