--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -68,8 +68,8 @@
     </article>
     -->
     <article>
-      <a href="/allcustomfaces.html">All Custom DEP Character Faces</a><br>
-      All currently supported custom portraits in the style of DEP. All Nahua portraits were done by Bananas! The old legacy Spax ones were done by me.
+      <a href="/allnahuafaces.html">All Nahua DEP Character Faces</a><br>
+      All of Nahua's portraits in the style of DEP (custom sprites were by Bananas)!
     </article>
     <!--
     <article>
