Add live-reload and JavaScript caching features to Vite configuration (#65)
This PR implements two major enhancements to the development workflow as
requested in the issue:

## 🔥 Live Reload Feature

Added a comprehensive live-reload system that watches source files and
automatically refreshes the browser when changes are detected:

- **New development command**: `npm run dev-watch` starts both file
watcher and dev server concurrently
- **Intelligent file watching**: Monitors `html/`, `js/`, `scss/`,
`css/`, and `data/` directories for changes
- **Debounced rebuilds**: 300ms debounce prevents excessive rebuilding
during rapid file changes
- **Seamless integration**: Works with Vite's built-in HMR for instant
browser reloads

## ⚡ JavaScript File Caching

Implemented a smart caching mechanism that significantly speeds up
builds by skipping unnecessary rebuilds:

- **Hash-based change detection**: Uses MD5 hashes to detect changes in
JavaScript files
- **Selective rebuilding**: Skips expensive custom build scripts when no
JS changes are detected
- **Persistent cache**: Stores file hashes in `.build-cache.json` for
cross-session persistence
- **Monitored files**: Tracks changes in `addpagemetadata.js`,
`js-controlled-webrings.js`, `buildDEPdialogue.js`, and `build-entry.js`

## 🛡️ Improved Error Handling

Enhanced the build process to be more resilient:

- **Graceful failure handling**: Network-dependent scripts (like
`buildDEPdialogue.js`) now fail gracefully without breaking the entire
build
- **Detailed logging**: Better error messages and warnings for debugging
- **Continued execution**: Build process continues even when individual
scripts fail

## 📖 Usage

**Development with live reload:**
```bash
npm run dev-watch
```

**Standard build (with caching):**
```bash
npm run build
```

## 🚀 Performance Impact

- **Initial builds**: Same performance as before
- **Subsequent builds**: Significantly faster when only non-JS files
change (e.g., HTML, CSS)
- **Development wo

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
     -Spax
   </article>
   <article who="claire" emotion="neutral">
-    Hey nerds. It's me, Claire.
+    Hey nerds. It's me, Claire !
   </article>
   <article who="claire" emotion="happy">
     I am now on a website. Woo!
