added more sites to the button selector

--- a/html/index.html
+++ b/html/index.html
@@ -110,7 +110,7 @@
       <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
     </a>
     <a href="https://goat.rest/">
-      <img src="https://goat.rest/88x31-anim.gif" alt="read goat.rest">
+      <img src="https://goat.rest/88x31-anim.gif" alt="goat.rest">
     </a>
     <a href="https://yhvr.me/">
       <img src="/buttons/yhvrdotme.gif" alt="yhvr.me">
@@ -173,10 +173,28 @@
       <img src="https://lisanne.gay/88x31_pls_DO_hotlink.png" alt="lisanne.gay">
     </a>
     <a href="https://sudospective.net/">
-      <img src="https://sudospective.net/content/images/2023/07/subo-badge-1.png" alt="sudospective.net">
+      <img src="https://sudospective.net/assets/badges/sudospective.png" alt="sudospective.net">
     </a>
     <a href="https://meow-d.github.io/">
       <img src="https://meow-d.github.io/assets/images/buttons/meow_d.webp" alt="meow-d.github.io">
+    </a>
+    <a href="https://onz.ee/">
+      <img src="https://onz.ee/assets/88x31s/avif/onzecki.avif" alt="onz.ee">
+    </a>
+    <a href="https://temstuff.neocities.org/">
+      <img src="https://64.media.tumblr.com/5249466109a089aa220762aa2075205c/a51f6f9947d2d663-78/s100x200/16dfd414c2d035315f340988656362bebc79d515.gif" alt="temstuff.neocities.org">
+    </a>
+    <a href="https://notnite.com/">
+      <img src="https://notnite.com/buttons/notnite.png" alt="notnite.com">
+    </a>
+    <a href="https://star.yugoslavia.best/">
+      <img src="https://star.yugoslavia.best/assets/img/badges/starundrscre.gif" alt="star.yugoslavia.best">
+    </a>
+    <a href="https://racc.at/">
+      <img src="https://racc.at/media/uploads/88x31.png" alt="racc.at">
+    </a>
+    <a href="https://canine.tools/">
+      <img src="https://canine.tools/assets/images/badges/badge.png" alt="canine.tools">
     </a>
   </article>
   <article who="nahua" emotion="bashful" id="spaxzone-button">
