forgot maia (important)

--- a/html/index.html
+++ b/html/index.html
@@ -196,6 +196,9 @@
     <a href="https://canine.tools/">
       <img src="https://canine.tools/assets/images/badges/badge.png" alt="canine.tools">
     </a>
+    <a href="https://maia.crimew.gay/">
+      <img src="https://maia.crimew.gay/badges/maia.crimew.gay.png" alt="maia.crimew.gay">
+    </a>
   </article>
   <article who="nahua" emotion="bashful" id="spaxzone-button">
     And don't forget to add my own button to your site!<br>
