star site update

--- a/html/index.html
+++ b/html/index.html
@@ -187,8 +187,8 @@
     <a href="https://notnite.com/">
       <img src="https://notnite.com/buttons/notnite.png" alt="notnite.com">
     </a>
-    <a href="https://star.yugoslavia.best/">
-      <img src="https://star.yugoslavia.best/assets/img/badges/starundrscre.gif" alt="star.yugoslavia.best">
+    <a href="https://starundrscre.xyz/">
+      <img src="https://starundrscre.xyz/assets/img/badges/starundrscre.gif" alt="starundrscre.xyz">
     </a>
     <a href="https://racc.at/">
       <img src="https://racc.at/media/uploads/88x31.png" alt="racc.at">
