remove the rat server stuff (RIP spinning rat cult)

--- a/html/index.html
+++ b/html/index.html
@@ -263,18 +263,10 @@
     My Discord (the most active platform I'm on) is <a href="https://discord.com/users/545395873891483662" target="_blank">@spaxolotl</a>.
   </article>
   <article who="nahua" emotion="look">
-    I am unfortunately at the friend limit though: 1000
+    Worst case scenario, my friend list is full, and you'll have to contact me elsewhere to tell me to remove someone as a friend.
   </article>
-  <article who="nahua" emotion="sus">
-    (Thanks, Discord)
-  </article>
-  <article who="nahua" emotion="expressionless">
-    You can still <a href="https://discord.gg/the-spinning-rat-cult-1001605562498297966" target="_blank">join my Discord server</a>,
-    but like I said earlier, it needs a restructuring. If you just want to contact me though,
-    this should be your best bet.
-  </article>
-  <article who="nahua" emotion="look">
-    (If the bot gives you issues during verification, just DM me or a mod and mention that you came from my site).
+  <article who="nahua" emotion="neutral">
+    But you should generally be able to add me.
   </article>
   <article who="nahua" emotion="happy" id="signal">
     I also have a Signal! My username there is <span class="underline">spax.01</span>, and my chats expire after a week by default.
@@ -320,7 +312,7 @@
     Stay tuned for updates!
   </article>
   <article class="short">
-    (This page was last updated on June 21st, 2025)<br><br>
+    (This page was last updated on October 8th, 2025)<br><br>
     ((This section will be updated automatically at some point))<br><br>
     (((Also don't click <a href="/nsfw" target="_blank">here</a>)))
   </article>
